jump modal position fixed

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -594,7 +594,7 @@ details[open] > summary {
 }
 
 .modal #jump-modal {
-    position: absolute;
+    position: fixed;
     //text-align: start;  // parent flex box is centering text
 }
 
